feat: add script snack3

--- a/snack3/index.html
+++ b/snack3/index.html
@@ -6,6 +6,9 @@
     <title>SNACK3</title>
 </head>
 <body>
+    <!-- Crea due tag div con due id diversi: -->
+    <div id="#uno"></div>
+    <div id="#due"></div>
 
     <script type="text/javascript" src="./js/script.js"></script>
 </body>
